--- a/src/pages/Register.css
+++ b/src/pages/Register.css
@@ -1,4 +1,4 @@
-.login-page {
+.register-page {
     width: 100vw;
     height: 100vh;
     display: flex;
@@ -7,16 +7,7 @@
     flex-direction: column
 }
 
-.login-form {
+.register-form {
     display: flex;
     flex-direction: column;
-}
-
-.link {
-    font-style: italic;
-    text-decoration: underline; 
-}
-
-.link:hover {
-    cursor: pointer;
 }
