--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -6,13 +6,16 @@
     margin: 10px;
     margin-bottom: 0;
     box-shadow: 0px 2px 0px 2px #151515;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.user-wrapper {
-    height: calc(100% - 20px);
-    max-width: 200px;
+.nav-bar .nav-bar-item {
     margin: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
