--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -3,13 +3,17 @@
     width: calc(100% - 20px);
     background-color: #f50;
     border-radius: 10px;
-    margin: 10px;
-    margin-bottom: 0;
+    margin-left: 10px;
+    margin-right: 10px;
     box-shadow: 0px 2px 0px 2px #151515;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    position: sticky;
+    top: 0;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .nav-bar .nav-bar-item {
