--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #222;
   color: #ddd;
-  max-height: 100%;
+  height: 100vh;
 }
 
-html {
-  max-height: 100%;
-}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+
