added restaurants autoloading

--- a/src/index.css
+++ b/src/index.css
@@ -16,5 +16,21 @@ code {
     monospace;
 }
 
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #444;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #f62;
+  border-radius: 4px;
+}
+
 
 
