--- a/src/components/Restaurants.css
+++ b/src/components/Restaurants.css
@@ -5,13 +5,14 @@
     min-width: 900px;
     align-items: center;
     justify-content: center;
+    min-height: 220px;
 }
 
 .restaurants-wrapper .restaurant-item {
     height: 180px;
     min-width: 800px;
     max-width: 800px;
-    border: 2px solid #ff5500;
+    border: 2px solid #f62;
     border-radius: 10px;
     margin-top: 20px;
     padding: 20px;
@@ -23,4 +24,14 @@
     position: absolute;
     right: 10px;
     bottom: 5px;
+}
+
+@keyframes shiftleft {
+    0% {transform: translateX(0);}
+    100% {transform: translateX(-2px); box-shadow: 2px 1px 2px 3px #111; background-color: #2a2a2a}
+}
+
+.restaurants-wrapper .restaurant-item:hover {
+    animation: shiftleft 0.2s forwards;
+    cursor: pointer;
 }
